IN DEVELOPMENT ======= 1.3.1

- added: auto-creating directories when are needed (logs, databases)

- fixed: paths (~ char is changing the relative path to the absolute path)

- removed: framework.verification()

======= 1.3.0-1

- updated: NoSQL version v2.0.3 (added new event on('load'))
- updated: debugging.js (watching of resources)
- updated: partial.js binary

- fixed: WebSocket dynamic routing
- fixed: Project directory (problem with clustered mode PM2 - https://github.com/Unitech/pm2)

======= 1.3.0

THIS VERSION IS RELEASE CANDIDATE 1 (RC 1)

- added: framework.config['default-ip'] (set the ip address from a configuration)
- added: framework.config['default-port'] (set the port from a configuration)
- added: framework.onRequest(req, res)
- added: framework.worker(name, [id], [timeout])
- added: framework.workers
- added: framework.versions
- added: framework.reconnect()
- added: framework.responseImage(req, res, filename/stream, fnProcess, [headers], [isIM])
- added: framework.fs.create.temporary(name, stream, [callback])
- added: framework.fs.rm.temporary(name)
- added: framework.fs.create.worker(name, content, [rewrite], [append])
- added: framework.fs.rm.worker(name)
- added: framework.on('ready')
- added: framework.on('reconfigure')
- added: framework.injectVersions(url, [rewrite])
- added: controller.image(filename/stream, fnProcess, [headers], [isIM])
- added: controller.subdomain (alias -> req.subdomain)
- added: controller.custom()
- added: controller.clear()
- added: controller.noClear()
- added: FrameworkImage.measure(callback)
- added: FrameworkImage.pipe(stream, [type], [options])
- added: HttpFile.stream([options])
- added: HttpFile.pipe(stream)
- added: HttpFile.measure(callback)
- added: HttpFile.md5(callback)
- added: builders.schema supports join models
- added: Number.parseDate([plus])
- added: supports 400 (Bad request)
- added: dynamic render View and Template from string
- added: simply static files versioning (example: static-version)