@@ -1,10 +1,20 @@
 IN DEVELOPMENT ======= 1.3.1
 
 - added: auto-creating directories when are needed (logs, databases)
+- added: framework.config['directory-download']
+- added: framework.routeDownload()
+- added: controller.routeDownload()
+- added: controller.currentDownload()
+- added: @{currentDownload}
 
 - fixed: paths (~ char is changing the relative path to the absolute path)
 
+- removed: framework.config['directory-upload']
 - removed: framework.verification()
+- removed: framework.routeUpload()
+- removed: controller.routeUpload()
+- removed: controller.currentUpload()
+- removed: @{currentUpload())
 
 ======= 1.3.0-1
 
